# 12345-hotline-agent

./: .gitignore  12345_hotline_agent_design.md  AGENTS.md  CLAUDE.md  README.md  gradio_app.py  main.py  pyproject.toml
agents/complaint/: AGENTS.md
agents/element_extraction/: AGENTS.md
agents/inquiry/: AGENTS.md
agents/suggestion/: AGENTS.md
data/: complaint_schemas.json  intent_keywords.json
docs/: agent_flow.md
docs/superpowers/plans/: 2026-04-02-12345-hotline-agent.md
skills/complaint-type-mapping/: SKILL.md
skills/context-switch/: SKILL.md
skills/empathy-response/: SKILL.md
skills/fallback-handling/: SKILL.md
skills/intent-classification/: SKILL.md
skills/knowledge-base-query/: SKILL.md
skills/multi-complaint/: SKILL.md
skills/ticket-submission/: SKILL.md
skills/warm-response-generation/: SKILL.md
tests/: test_agent_creation.py  test_complaint_tracker.py  test_response_guard.py  test_session_store.py  test_supabase_mcp_entry.py  test_tools.py
text-to-sql-agent_original/: agent.py
tools/: __init__.py  knowledge_base.py  session_store.py  supabase_mcp_entry.py  ticket_api.py
utils/: complaint_tracker.py  response_guard.py
